Fixed too much memory use issue and images not centering

--- a/css/style.css
+++ b/css/style.css
@@ -73,4 +73,9 @@ body {
     color: white !important; 
 }
 
+.img-fluid{
+    margin: auto;
+    display: block;
+}
+
 
